--- a/package.json
+++ b/package.json
@@ -10,10 +10,17 @@
     "lint": "biome check ./src",
     "lint:fix": "biome lint --write ./src",
     "format": "biome format --write ./src",
-    "check": "biome check --write ./src"
+    "check": "biome check --write ./src",
+    "storybook": "storybook dev -p 6006",
+    "build-storybook": "storybook build"
   },
   "dependencies": {
     "@biomejs/biome": "^2.2.4",
+    "@fortawesome/fontawesome-svg-core": "^7.0.1",
+    "@fortawesome/free-brands-svg-icons": "^7.0.1",
+    "@fortawesome/free-regular-svg-icons": "^7.0.1",
+    "@fortawesome/free-solid-svg-icons": "^7.0.1",
+    "@fortawesome/react-fontawesome": "^3.0.2",
     "@tailwindcss/vite": "^4.1.13",
     "clsx": "^2.1.1",
     "react": "^19.1.1",
@@ -22,10 +29,12 @@
     "tailwindcss": "^4.1.13"
   },
   "devDependencies": {
+    "@storybook/react-vite": "9.1.8",
     "@types/react": "^19.1.10",
     "@types/react-dom": "^19.1.7",
     "@vitejs/plugin-react-swc": "^4.0.0",
     "globals": "^16.3.0",
+    "storybook": "9.1.8",
     "typescript": "~5.8.3",
     "vite": "^7.1.2"
   },
